--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation 'com.github.MdFarhanRaja:SearchableSpinner:1.2'
 }
 apply plugin: 'com.google.gms.google-services'
