added user profile & vets

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,8 +49,8 @@
         <activity android:name=".FiltersActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".ForgotPasswordActivity" />
-
-
+        <activity android:name=".UserProfileActivity" />
+        <activity android:name=".UserProfileActivityOther" />
 
         <service android:name=".NotificationService"/>
 
