--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-base:16.0.1'
+    implementation 'com.google.android.gms:play-services-drive:16.0.0'
 
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.android.support:design:27.1.1'
 
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
